# gsstreamer_to_gtk

./: .gitignore  Cargo.toml  README.md
src/: gst_utils.rs  main.rs  style.css
