[package]
name = "ncy_gtk"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.9.6"
gstreamer = "0.23.5"
tokio = { version = "1", features = ["full"] }
# gstreamer-app = "0.17.3"
gstreamer-video = "0.23.5"
gst-plugin-gtk4 = "0.13.5"
chrono = "0.4"

# [dependencies.stm32libs]
# git = "ssh://gitea@server.local/RcPark/RpiVideo.git"
# rev = "10cb490849"
# # path = "../../libs/Stm32Libs"
# features = ["gstreamer"]

